View Issue Details

IDProjectCategoryView StatusLast Update
0024169Open CASCADEOCCT:Codingpublic2013-12-19 13:57
ReporteromyAssigned Toabv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformLinuxOSDebian 4.0 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024169: Eliminate CLang compiler warning -Wunused-value
DescriptionIt is necessary to eliminate warning -Wunused-value, shown by CLang compiler on Ubuntu 13.04
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0024162 closedabv Eliminate CLang compiler warning 

Activities

omy

2013-09-12 18:15

developer   ~0025553

Dear abv,
Please, review the branch CR24169

abv

2013-09-13 08:28

manager   ~0025559

No remarks, please test

mkv

2013-09-18 10:14

tester   ~0025624

Dear BugMaster,

Branch CR24169 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: a0a63744d539a7c9ebc1753ef159964978192f04

Number of compiler warnings:

occt component :
Linux: 782 (790 on master)
Windows: 392 (392 on master)

products component :
Linux: 190 (190 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 366527252 / 366753404
Total CPU difference: 43607.2900000008 / 44239.22000000111

Testing on Windows:
Total MEMORY difference: 428659660 / 429163944
Total CPU difference: 39950.421875 / 39406.0

There are not differences in images found by testdiff.

Related Changesets

occt: master b6abaec0

2013-09-11 13:18:49

abv


Committer: abv Details Diff
0024169: Eliminate CLang compiler warning -Wunused-value

Got rid of warning -Wunused-value
Affected Issues
0024169
mod - src/Adaptor3d/Adaptor3d_CurveOnSurface.cxx Diff File
mod - src/AdvApp2Var/AdvApp2Var_Iso.cxx Diff File
mod - src/GeomFill/GeomFill_GuideTrihedronAC.cxx Diff File
mod - src/GeomFill/GeomFill_GuideTrihedronPlan.cxx Diff File

Issue History

Date Modified Username Field Change
2013-09-12 18:11 omy New Issue
2013-09-12 18:11 omy Assigned To => omy
2013-09-12 18:13 omy Summary 0024168: Eliminate CLang compiler warning -Wunused-value => Eliminate CLang compiler warning -Wunused-value
2013-09-12 18:15 omy Note Added: 0025553
2013-09-12 18:15 omy Assigned To omy => abv
2013-09-12 18:15 omy Status new => resolved
2013-09-12 18:17 omy Relationship added related to 0024162
2013-09-13 08:28 abv Note Added: 0025559
2013-09-13 08:28 abv Assigned To abv => bugmaster
2013-09-13 08:28 abv Status resolved => reviewed
2013-09-16 16:54 mkv Assigned To bugmaster => mkv
2013-09-18 10:14 mkv Note Added: 0025624
2013-09-18 10:14 mkv Test case number => Not needed
2013-09-18 10:14 mkv Assigned To mkv => bugmaster
2013-09-18 10:14 mkv Status reviewed => tested
2013-09-20 15:44 abv Changeset attached => occt master b6abaec0
2013-09-20 15:44 abv Assigned To bugmaster => abv
2013-09-20 15:44 abv Status tested => verified
2013-09-20 15:44 abv Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0
2014-01-11 11:58 abv Category OCCT Release:BUILD => OCCT:Coding