0024169: Eliminate CLang compiler warning -Wunused-value

Got rid of warning -Wunused-value