src/Adaptor3d/Adaptor3d_CurveOnSurface.cxx
@@ -873,8 +873,9 @@ Standard_Integer Adaptor3d_CurveOnSurface::NbIntervals
   // value into myIntervals which will be equal first value.
   myIntervals = new TColStd_HArray1OfReal(1,nbpoint);
   i=0;
-  for (It.Initialize(tmpIntervals->Set());It.More();It.Next(),i)
-  { i++;
+  for (It.Initialize(tmpIntervals->Set());It.More();It.Next())
+  { 
+    ++i;
     myIntervals->SetValue(i,It.Value());
   } 
   if( i==1 )
